--- a/index.html
+++ b/index.html
@@ -203,12 +203,12 @@
               </ul>
             </div>
             <button class="arrow next"></button>
-            <div align="center">&nbsp;<audio controls="controls"> <source src="/media/dion.mp3"
+            <div align="center">&nbsp;<audio controls="controls"> <source src="./media/dion.mp3"
                   type="audio/mpeg"> Your browser does not support the audio
                 tag. </audio> </div>
-			<div align="center">&nbsp;<video src="l2video.mp4" width="640"  height="320" controls poster="vistaprevia.jpg">
+			<div align="center">&nbsp;<video src="./media/l2video.mp4" width="640"  height="320" controls poster="vistaprevia.jpg">
 Lo sentimos. Este vídeo no puede ser reproducido en tu navegador.<br>
-La versión descargable está disponible en <a href="l2video.mp4">Enlace</a>. 
+La versión descargable está disponible en <a href="./media/l2video.mp4">Enlace</a>. 
 </video>
           </div>
           <!-- feature-block --> </div>
